--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
   "dependencies": {
     "antd": "^4.16.3",
     "core-js": "^3.14.0",
+    "file-saver": "^2.0.5",
+    "json-beautify": "^1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "regenerator-runtime": "^0.13.7",
